Bug 504825 - kdeplasma-addons applets/comic bf656742175d1c0d326559d7636e5541579a80e9 kills comic updates
Summary: kdeplasma-addons applets/comic bf656742175d1c0d326559d7636e5541579a80e9 kills...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Comic widget (other bugs)
Version First Reported In: 6.4.80
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-05-26 17:03 UTC by Duncan
Modified: 2025-05-27 14:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Duncan 2025-05-26 17:03:36 UTC
A recent commit to kdeplasma-addons seems to have broken applets/comic updating.  Bisecting seems to point to:

commit bf656742175d1c0d326559d7636e5541579a80e9
Author:     Christoph Wolk <cwo.kde@despammed>
AuthorDate: Thu May 8 00:22:50 2025 +0200
Commit:     Christoph Wolk <cwo.kde@despammed>
CommitDate: Sun May 18 07:40:12 2025 +0000

applets/comic: don't unnecessarily reload model

The applet currently reloads the model and update checker whenever the
configuration is saved, as some of the changed settings may apply to
them. As model reloads change the current tab, this is rather annoying
when e.g. saving an image (which stores the directory in the
configuration).

Instead, check whether the list of enabled providers and/or update
checking interval were changed, and only reload the parts that are
necessary.

[end git log entry]

(Current head is bad at 785a8c8c74336896c0f2f82943960b3f16a80a5c but I updated to that from 6c38e447ef01bd0dc84ffa7bbc4ba0ebbd345262 hoping to fix the issue without luck.  My previous working version was 1a3c646fd44c58ce3bca67e5b3d5011ffc7251f1 so the problem had to be between 6c38 and 1a3c.  Realizing that as soon as the comics could update I'd lose my easy testing ability as it's be current already with nothing to update for another day, I worked backward testing only the applets/comic commits.  As I said, the bf65 commit listed above was bad, while the next earlier comic commit  f701c177484dc99d39e1961526140839640b2da7 updated comics again, so unless the bad commit was one of the apparently comic unrelated commits between those, the bf65 commit is the culprit.)

I'm running most of my kde live-git using the gentoo/kde overlay packages for that purpose, on top of gentoo/~amd64 qt 6.8.3 and using wayland (no X but xwayland).
Comment 1 Duncan 2025-05-26 17:05:38 UTC
CCing author/committer.
Comment 2 cwo 2025-05-26 17:17:04 UTC
Yeah, I also noticed this and submitted about an hour ago (https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/825). Hope to get it into master soon. Thanks for testing!
Comment 3 cwo 2025-05-27 13:20:18 UTC
Git commit 652253bbc75f491e4bf33ddd936436488aaf6cfc by Christoph Wolk.
Committed on 26/05/2025 at 17:17.
Pushed by cwo into branch 'master'.

applets/comic: fix updates not working

Updates were broken in three ways: the correct default value for the
interval was not set, so auto-updates were off if left at the
default value of 30 minutes; a misspecified conditional led to the
checker not being instantiated, and if auto-updates are off, there is no
way to bypass the cache, so the widget is stuck at the state it was when
auto-updates were turned off. (For some provider types, Jump to still
worked, but not for number-based providers and this is rather
cumbersome).

This change fixes the wrong default values and conditional, and sets
every attempt to read the most recent strip from a comic to bypass the
cache if auto-updates are off.

M  +11   -3    applets/comic/comic.cpp

https://invent.kde.org/plasma/kdeplasma-addons/-/commit/652253bbc75f491e4bf33ddd936436488aaf6cfc
Comment 4 cwo 2025-05-27 13:29:17 UTC
Git commit 42e37d1ffc59c8b8c4df73bff8041fc01ef61dc0 by Christoph Wolk.
Committed on 27/05/2025 at 13:20.
Pushed by cwo into branch 'Plasma/6.4'.

applets/comic: fix updates not working

Updates were broken in three ways: the correct default value for the
interval was not set, so auto-updates were off if left at the
default value of 30 minutes; a misspecified conditional led to the
checker not being instantiated, and if auto-updates are off, there is no
way to bypass the cache, so the widget is stuck at the state it was when
auto-updates were turned off. (For some provider types, Jump to still
worked, but not for number-based providers and this is rather
cumbersome).

This change fixes the wrong default values and conditional, and sets
every attempt to read the most recent strip from a comic to bypass the
cache if auto-updates are off.


(cherry picked from commit 652253bbc75f491e4bf33ddd936436488aaf6cfc)

Co-authored-by: Christoph Wolk <cwo.kde@posteo.net>

M  +11   -3    applets/comic/comic.cpp

https://invent.kde.org/plasma/kdeplasma-addons/-/commit/42e37d1ffc59c8b8c4df73bff8041fc01ef61dc0