applets/comic/comic.cpp
@@ -52,6 +52,10 @@ void ComicApplet::dataUpdated(const ComicMetaData &data)
     const QString source = data.identifier;
     setBusy(false);
 
+    if (mEngine->isCheckingForUpdates() && config().readEntry(QLatin1String("checkNewComicStripsIntervall"), 30) == 0) {
+        mEngine->setIsCheckingForUpdates(false); // turn it back off if auto-updates are disabled
+    }
+
     // disconnect prefetched comic strips
     if (source != mOldSource) {
         return;
@@ -61,7 +65,7 @@ void ComicApplet::dataUpdated(const ComicMetaData &data)
 
     // looking at the last index, thus not mark it as new
     KConfigGroup cg = config();
-    if (!data.error && !mCurrent.hasNext() && cg.readEntry(QLatin1String("checkNewComicStripsIntervall"), 0)) {
+    if (!data.error && !mCurrent.hasNext() && cg.readEntry(QLatin1String("checkNewComicStripsIntervall"), 30)) {
         setTabHighlighted(mCurrent.id(), false);
     }
 
@@ -94,7 +98,7 @@ void ComicApplet::updateUsedComics()
 {
     KConfigGroup cg = config();
     const bool enabledProvidersChanged = cg.readEntry("tabIdentifier", QStringList()) != mModel->enabledProviders();
-    const int checkInterval = cg.readEntry(QLatin1String("checkNewComicStripsIntervall"), 0);
+    const int checkInterval = cg.readEntry(QLatin1String("checkNewComicStripsIntervall"), 30);
 
     if (enabledProvidersChanged) {
         loadProviders();
@@ -109,7 +113,7 @@ void ComicApplet::updateUsedComics()
         }
     }
 
-    if (enabledProvidersChanged || (mCheckNewStrips && checkInterval != mCheckNewStrips->minutes())) {
+    if (enabledProvidersChanged || !mCheckNewStrips || checkInterval != mCheckNewStrips->minutes()) {
         delete mCheckNewStrips;
         mCheckNewStrips = nullptr;
         if (checkInterval) {
@@ -173,6 +177,10 @@ void ComicApplet::updateComic(const QString &identifierSuffix)
 
     if (!id.isEmpty()) {
         setBusy(true);
+
+        if (identifierSuffix.isEmpty() && config().readEntry(QLatin1String("checkNewComicStripsIntervall"), 30) == 0) {
+            mEngine->setIsCheckingForUpdates(true); // if auto-updates are off, we need to check every current request
+        }
 
         const QString identifier = id + QLatin1Char(':') + identifierSuffix;
 
